autorzy html & css & js

--- a/kontakt.html
+++ b/kontakt.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Gazetka Szkolna – Kontakt</title>
   <link rel="stylesheet" href="kontakt.css">
   <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="nav.css">
+  <link rel="stylesheet" href="nav.css">
 </head>
+
 <body>
-     <nav>
-        <div class="logo">
-            <h1>Gazetka szkolna</h1>
-        </div>
-        <ul id="menuList">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Product</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-        <div class="menu-icon">
-            <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
-        </div>
-    </nav>
+  <nav>
+    <div class="logo">
+      <h1>Gazetka szkolna</h1>
+    </div>
+    <ul id="menuList">
+      <li><a href="">Home</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Services</a></li>
+      <li><a href="">Product</a></li>
+      <li><a href="">Contact</a></li>
+    </ul>
+    <div class="menu-icon">
+      <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
+    </div>
+  </nav>
   <div class="container">
     <section class="info-section">
       <h2>Gazetka szkolna – miejsce dla Ciebie!</h2>
       <p>
-        Nasza gazetka szkolna to prawdziwe centrum inspiracji i informacji: publikujemy newsy z życia szkoły, wywiady z uczniami oraz nauczycielami, kreatywne reportaże i porady edukacyjne. Możesz znaleźć tu interesujące recenzje książek, zagadki, humor oraz ogłoszenia o najnowszych wydarzeniach. Redakcja gazetki zachęca każdego ucznia do przesyłania własnych tekstów – tu możesz rozwijać swoje pasje i zdobywać doświadczenie dziennikarskie.
+        Nasza gazetka szkolna to prawdziwe centrum inspiracji i informacji: publikujemy newsy z życia szkoły, wywiady z
+        uczniami oraz nauczycielami, kreatywne reportaże i porady edukacyjne. Możesz znaleźć tu interesujące recenzje
+        książek, zagadki, humor oraz ogłoszenia o najnowszych wydarzeniach. Redakcja gazetki zachęca każdego ucznia do
+        przesyłania własnych tekstów – tu możesz rozwijać swoje pasje i zdobywać doświadczenie dziennikarskie.
       </p>
       <ul>
         <li>Kącik literacki – publikacje uczniów</li>
@@ -74,9 +79,10 @@
   <footer>
     &copy; 2025 Gazetka Szkolna | Wszystkie prawa zastrzeżone | Projekt edukacyjny
   </footer>
- 
+
 
   <script src="nav.js"></script>
   <script src="https://kit.fontawesome.com/f8e1a90484.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
