--- a/kontakt.html
+++ b/kontakt.html
@@ -16,11 +16,11 @@
       <h1>Gazetka szkolna</h1>
     </div>
     <ul id="menuList">
-      <li><a href="">Home</a></li>
-      <li><a href="">About</a></li>
-      <li><a href="">Services</a></li>
-      <li><a href="">Product</a></li>
-      <li><a href="">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="autorzy.html">Autorzy</a></li>
+      <li><a href="kategorie.html">Kategorie</a></li>
+      <li><a href="aktualnosci.html">Aktualności</a></li>
+      <li><a href="kontakt.html">Kontkt</a></li>
     </ul>
     <div class="menu-icon">
       <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
