--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h1>Gazetka szkolna</h1>
         </div>
         <ul id="menuList">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/artykuly.html">Artykuły</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">Product</a></li>
             <li><a href="">Contact</a></li>
@@ -30,7 +30,7 @@
 
     <main>
         <article>
-            <img src="szkola.jpg" alt="">
+            <img src="https://picsum.photos/400/200?random=1">
             <div class="text-wrapper">
                 <p><span>June 30 2024</span> |  Szkoła</p>
             <h1>Lorem Ipsum</h1>
@@ -41,7 +41,7 @@
             
         </article>
         <article>
-            <img src="szkola.jpg" alt="">
+            <img src="https://picsum.photos/400/200?random=2">
             <div class="text-wrapper">
                 <p><span>June 30 2024</span> |  Szkoła</p>
             <h1>Lorem Ipsum</h1>
@@ -52,7 +52,7 @@
             
         </article>
         <article>
-            <img src="szkola.jpg" alt="">
+            <img src="https://picsum.photos/400/200?random=3">
             <div class="text-wrapper">
                 <p><span>June 30 2024</span> |  Szkoła</p>
             <h1>Lorem Ipsum</h1>
