--- a/artykuly.html
+++ b/artykuly.html
@@ -82,6 +82,44 @@ nav ul li a{
         transition: all 0.5s;
     }
 }
+main{
+    width: 100%;
+    display: flex;
+}
+.categories{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.block{
+    width: 15%;
+    height: 70px;
+    margin: 0 10px 0 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+    border-radius: 100px;
+}
+.block h1{
+    font-size: 30px;
+}
+.pasek{
+    width: 40%;
+    height: 4px;
+    background-color: red;
+}
+.block h1{
+    cursor: pointer;
+}
+.block:hover{
+    .pasek {
+        transform: scale(120%) ;
+        transition: 0.5s;
+    }
+}
     </style>
 </head>
 <body>
@@ -90,8 +128,8 @@ nav ul li a{
             <h1>Gazetka szkolna</h1>
         </div>
         <ul id="menuList">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/artykuly.html">Artykuły</a></li>
             <li><a href="">Services</a></li>
             <li><a href="">Product</a></li>
             <li><a href="">Contact</a></li>
@@ -100,6 +138,34 @@ nav ul li a{
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
     </nav>
+
+    <main>
+
+        <div class="categories">
+            <div class="block">
+                <h1>Kultura</h1>
+                <div class="pasek" style="width: 38%;"></div>
+            </div>
+            <div class="block">
+                <h1>Sport</h1>
+                <div class="pasek" style="width: 30%;" ></div>
+            </div>
+            <div class="block">
+                <h1>Nauka</h1>
+                <div class="pasek" style="width: 34%;"></div>
+            </div>
+            <div class="block">
+                <h1>Życie szkoły</h1>
+                <div class="pasek"style="width: 63%;"></div>
+            </div>
+            <div class="block">
+                <h1>Opinie</h1>
+                <div class="pasek"style="width: 34%;"></div>
+            </div>
+
+        </div>
+
+    </main>
 
     <script>
         let menuList = document.getElementById("menuList")
