--- a/kontakt.html
+++ b/kontakt.html
@@ -20,7 +20,7 @@
       <li><a href="autorzy.html">Autorzy</a></li>
       <li><a href="kategorie.html">Kategorie</a></li>
       <li><a href="aktualnosci.html">Aktualności</a></li>
-      <li><a href="kontakt.html">Kontkt</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
     <div class="menu-icon">
       <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
