--- a/artykuly.html
+++ b/artykuly.html
@@ -127,13 +127,13 @@ main{
         <div class="logo">
             <h1>Gazetka szkolna</h1>
         </div>
-        <ul id="menuList">
-            <li><a href="/">Home</a></li>
-            <li><a href="/artykuly.html">Artykuły</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Product</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
+       <ul id="menuList">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="autorzy.html">Autorzy</a></li>
+      <li><a href="artykuly.html">Kategorie</a></li>
+      <li><a href="aktualnosci.html">Aktualności</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
+    </ul>
         <div class="menu-icon">
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
