--- a/autorzy.html
+++ b/autorzy.html
@@ -16,12 +16,12 @@
             <h1>Gazetka szkolna</h1>
         </div>
         <ul id="menuList">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="autorzy.html">Autorzy</a></li>
-            <li><a href="kategorie.html">Kategorie</a></li>
-            <li><a href="aktualnosci.html">Aktualności</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-        </ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="autorzy.html">Autorzy</a></li>
+      <li><a href="artykuly.html">Kategorie</a></li>
+      <li><a href="aktualnosci.html">Aktualności</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
+    </ul>
         <div class="menu-icon">
             <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
         </div>
