--- a/kontakt.html
+++ b/kontakt.html
@@ -18,7 +18,7 @@
     <ul id="menuList">
       <li><a href="index.html">Home</a></li>
       <li><a href="autorzy.html">Autorzy</a></li>
-      <li><a href="kategorie.html">Kategorie</a></li>
+      <li><a href="artykuly.html">Kategorie</a></li>
       <li><a href="aktualnosci.html">Aktualności</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
