--- a/autorzy.html
+++ b/autorzy.html
@@ -11,19 +11,19 @@
 </head>
 
 <body>
-    <nav>
+     <nav>
         <div class="logo">
-            <h1>Gazetka szkolna</h1>
+            <h1>Gazetka Szkolna</h1>
         </div>
         <ul id="menuList">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="autorzy.html">Autorzy</a></li>
-      <li><a href="artykuly.html">Kategorie</a></li>
-      <li><a href="aktualnosci.html">Aktualności</a></li>
-      <li><a href="kontakt.html">Kontakt</a></li>
-    </ul>
+            <li><a href="index.html">Strona Główna</a></li>
+            <li><a href="autorzy.html">Autorzy</a></li>
+            <li><a href="aktualnosci.html">Aktualności</a></li>
+            <li><a href="artykuly.html">Kategorie</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+        </ul>
         <div class="menu-icon">
-            <i class="fa-solid fa-bars" onclick="toggleMenu()"></i>
+           <svg xmlns="http://www.w3.org/2000/svg" id="burger" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu-icon lucide-menu"><path d="M4 5h16"/><path d="M4 12h16"/><path d="M4 19h16"/></svg>
         </div>
     </nav>
     <div class="container">
